<resources>
    <string name="app_name">Lapis</string>

    <!-- Misc -->
    <string name="ok">OK</string>
    <string name="na">N/A</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>

    <!-- Landing Page -->
    <string name="get_started">Get started</string>
    <string name="login">Login</string>
    <string name="logo_desc">White \'Lapis\' logo</string>

    <!-- SignUp Page -->
    <string name="welcome">Welcome to Lapis</string>
    <string name="signup_to_use">Sign up to use our services</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone number</string>
    <string name="sign_up">Sign Up</string>

    <!-- Login Page-->
    <string name="enter">Enter</string>

    <!-- Home Page -->
    <string name="search_title">Your next destination…</string>
    <string name="search">Search</string>
    <string name="our_picks">Our picks</string>
    <string name="blue_logo_desc">Blue \'Lapis\' logo</string>
    <string name="user_icon_desc">User icon</string>

    <!-- User Page -->
    <string name="user_title">Hi, guest!</string>
    <string name="edit">Edit</string>
    <string name="rate_your_stays">Rate your stays</string>
    <string name="sing_out_desc">Sign Out Button</string>

    <!-- Search Page -->
    <string name="destination">Destination</string>
    <string name="clear_filters_desc">Blue clear filters icon</string>
    <string name="calendar_dec">Blue calendar icon</string>
    <string name="choose_dates">Choose dates</string>
    <string name="capacity_desc">Blue capacity icon</string>
    <string name="minus">-</string>
    <string name="capacity">Capacity</string>
    <string name="plus">+</string>
    <string name="under">Under</string>
    <string name="price">Price</string>
    <string name="price_per_night">€ per night</string>

    <!-- Search Page Footnote -->
    <string name="copyright">© 2024 Lapis. Icons by <a href="https://icons8.com/">Icons8</a></string>

    <!-- Rental Page and Rental List Item -->
    <string name="rental_image_desc">Rental image</string>
    <string name="rental_name">Rental name</string>
    <string name="rental_location">Location</string>
    <string name="rental_capacity">Capacity:</string>
    <string name="nightly_rate">Nightly Rate</string>
    <string name="euro_symbol">€</string>
    <string name="check_availability">Check availability</string>
    <string name="open_parenthesis">(</string>
    <string name="close_parenthesis">)</string>
    <string name="star_icon_desc">Small star icon</string>
    <string name="small_user_icon_desc">Small user icon</string>

    <!-- Booking Popup -->
    <string name="new_booking">Would you like to book this rental?</string>
    <string name="total">Total:</string>

    <!-- Stay List Item -->
    <string name="your_stay_at">Your stay at</string>
    <string name="in">in</string>

    <!-- Confirm changes popup -->
    <string name="confirm_rating">Confirm rating?</string>
    <string name="out_of_5">/ 5</string>
</resources>
