<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white"
    tools:context=".HomePage.HomePageActivity">

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="78dp"
        android:background="@color/royal_blue"
        android:backgroundTint="@color/royal_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/homepage_header_logo"
        android:layout_width="151dp"
        android:layout_height="78dp"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@drawable/lapis_logo_blue_cropped"
        android:contentDescription="@string/blue_logo_desc" />

    <ImageView
        android:id="@+id/header_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/divider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.915"
        app:layout_constraintStart_toEndOf="@+id/homepage_header_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/user_icon"
        android:contentDescription="@string/user_icon_desc" />

    <TextView
        android:id="@+id/search_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/search_title"
        android:textColor="@color/royal_blue"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <EditText
        android:id="@+id/homepage_edit_text_destination"
        android:layout_width="290dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_rect_thick_stroke"
        android:drawableStart="@drawable/search_icon_settings"
        android:ems="10"
        android:fontFamily="@font/inter_regular"
        android:hint="@string/search"
        android:imeOptions="actionSearch"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textAlignment="viewStart"
        android:textColor="@color/black"
        android:textColorHint="@color/hint"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_title" />

    <TextView
        android:id="@+id/our_picks_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/our_picks"
        android:textColor="@color/royal_blue"
        android:textSize="26sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homepage_edit_text_destination" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_page_rental_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/our_picks_title" />
</androidx.constraintlayout.widget.ConstraintLayout>
